syntax = "proto3";

option java_package = "io.grpc.examples";

package helloworld;

// 欢迎服务.
service Greeter {
    //发送请求
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// 请求信息（包含用户名）
message HelloRequest {
    string name = 1;
}

// 请求信息（包含用户名）
message HelloReply {
    string message = 1;
}